@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2003/07/17 21:28:58 grant Exp $
+# $NetBSD: Makefile,v 1.12 2004/01/28 13:29:20 xtraeme Exp $
 #
 
 DISTNAME=	quicklist-0.8.6
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	databases x11
 MASTER_SITES=	ftp://ftp.quicklist.org/
 
@@ -14,7 +14,7 @@ BUILD_USES_MSGFMT=	yes
 
 USE_BUILDLINK2=	yes
 GNU_CONFIGURE=	yes
-USE_X11BASE=	yes
+USE_X11=	yes
 
 .include "../../devel/gettext-lib/buildlink2.mk"
 .include "../../x11/gtk/buildlink2.mk"
