@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4629 2004/01/28 13:20:47 xtraeme Exp $
+$NetBSD: CHANGES,v 1.4630 2004/01/28 13:30:11 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -515,3 +515,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated rosegarden to 2.1.4nb1 [xtraeme 2004-01-28]
 	Updated snd to 19980212nb1 [xtraeme 2004-01-28]
 	Updated xdeview to 0.5.18nb1 [xtraeme 2004-01-28]
+	Updated quickview to 0.8.6nb3 [xtraeme 2004-01-28]
